fix: Restore intra-module progress logic and refine CSS spacing

--- a/style.css
+++ b/style.css
@@ -582,8 +582,9 @@ input.code-input:focus {
 
 .cutscene-status-overlay {
   position: absolute;
-  top: 35%;
+  top: 25%;
   left: 50%;
+  width: 100%;
   transform: translate(-50%, -50%);
   text-align: center;
   z-index: 10;
